--- a/app.json
+++ b/app.json
@@ -4,7 +4,11 @@
     "slug": "trockly-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/trocklyLogo.png",
+    "platforms": [
+      "android",
+      "ios"
+    ],
     "scheme": "trocklyapp",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
@@ -14,9 +18,7 @@
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#174359",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "foregroundImage": "./assets/images/trocklyLogo.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
@@ -30,7 +32,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/trocklyLogo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#3C3C3C",
@@ -38,7 +40,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
