--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "^19.0.7",
     "expo-router": "~6.0.4",
@@ -41,7 +42,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "expo-blur": "~15.0.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
